refactor: streamline application initialization and enhance constants management
- Move to the `ApplicationInitializer` class to simplify application startup logic, delegating initialization responsibilities directly within the `Application` class.
- Introduced new constants classes (`LocaleConstants`, `RouteConstants`, `TransactionAnnotations`, and `SecurityConstants`) to centralize and standardize the management of application constants, improving maintainability and readability.
- Updated various components and services to utilize the new constants, ensuring consistency across the application.
- Enhanced error handling and logging practices by introducing specific exception classes for persistence and retrieval operations, improving clarity in error management.